--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 	<title>my new html site</title>
 </head>
 <body>
-<h1>welcome to my site</h1>
+<h1>welcome to my site\n please subscribe</h1>
 </body>
 </html>
